<resources>
    <string name="app_name">Blind Stick</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Selamat Datang</string>
    <string name="user">Wayan Puranata</string>
    <string name="toolsuser">Made Mandala</string>
    <string name="connect">Connected</string>
    <string name="disconect">Disconnect</string>
    <string name="supoort">Supported By</string>
    <string name="bpm">BPM</string>
    <string name="blood">SpO2</string>
    <string name="time">Time</string>
    <string name="setting">Setting</string>
    <string name="delete_item">Hapus Semua</string>
    <string name="fingger">Sidik Jari</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="sidik_jari">Sidik Jari</string>
    <string name="tambah_sidikjari">Tambah Sidik Jari</string>
    <string name="powerby">Powered by</string>
    <string name="upload_foto">Upload Foto</string>
    <string name="desc_foto">Pilih gambar yang ingin di upload atau ambil gambar</string>
    <string name="ambil_foto">Ambil Gambar</string>
    <string name="pilih_foto">Cari Gambar</string>
    <string name="no_data">Data Tidak Tersedia</string>
    <string name="reset">Reset Koneksi Perangkat</string>
</resources>