<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="140dp"
        app:cardBackgroundColor="@color/gray_status"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/upload_foto"
            android:textSize="20sp" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/montserratregular"
            android:text="@string/desc_foto"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ambil_gambar"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="85dp"
            android:background="@drawable/submit_button"
            android:text="@string/ambil_foto"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:fontFamily="@font/montserratbold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cari_gambar"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="85dp"
            android:background="@drawable/submit_button"
            android:text="@string/pilih_foto"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:fontFamily="@font/montserratbold"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/upload_cardview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/gray_status"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_container"
                android:layout_width="280dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/upload_button"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/submit_button"
                android:text="Upload"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:fontFamily="@font/montserratbold"
                app:layout_constraintTop_toBottomOf="@id/image_container"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_foto_button"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:background="@drawable/cancel_button"
                android:text="Cancel"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:fontFamily="@font/montserratbold"
                app:layout_constraintTop_toBottomOf="@id/image_container"
                app:layout_constraintLeft_toRightOf="@id/upload_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/progress_card"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/gray_status"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Uploading Foto..."
            android:textSize="20sp"
            android:fontFamily="@font/montserratmedium"
            android:layout_marginTop="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />

        <ProgressBar
            android:id="@+id/progress_upload"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
            android:layout_width="260dp"
            android:layout_height="10dp"
            android:progressDrawable="@drawable/custom_progressbar"
            android:max="100"
            android:progress="0"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>