<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/liquid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="-30dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/username_tongkat"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/montserratlight"
                android:hint="Pengguna Tongkat"
                android:inputType="text"
                android:textSize="30px" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="75dp"
                android:alpha="0.4"
                android:src="@drawable/userone" />

            <EditText
                android:id="@+id/username_keluarga"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="115dp"
                android:fontFamily="@font/montserratlight"
                android:hint="Keluarga"
                android:inputType="text"
                android:textSize="30px" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="130dp"
                android:alpha="0.4"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/hapus_log"
                android:layout_width="245dp"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="180dp"
                android:fontFamily="@font/montserratlight"
                android:gravity="center_vertical"
                android:text="Hapus Data Log"
                android:textSize="30px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="305dp"
                android:layout_marginTop="190dp"
                android:fontFamily="@font/montserratlight"
                android:text=">"
                android:textSize="30px" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="185dp"
                android:alpha="0.4"
                android:src="@drawable/delete" />

            <TextView
                android:id="@+id/fingger_button"
                android:layout_width="245dp"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="230dp"
                android:fontFamily="@font/montserratlight"
                android:gravity="center_vertical"
                android:text="@string/fingger"
                android:textSize="30px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="305dp"
                android:layout_marginTop="240dp"
                android:fontFamily="@font/montserratlight"
                android:text=">"
                android:textSize="30px" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="240dp"
                android:alpha="0.4"
                android:src="@drawable/fingerprint" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="290dp"
                android:background="@drawable/submit_button"
                android:text="@string/simpan"
                android:textColor="@color/white"
                android:fontFamily="@font/montserratbold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="190dp"
                android:layout_marginTop="290dp"
                android:background="@drawable/cancel_button"
                android:text="@string/batal"
                android:textColor="@color/white"
                android:fontFamily="@font/montserratbold"/>

            <ImageView
                android:id="@+id/arduino_logo"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="185dp"
                android:layout_marginLeft="185dp"
                android:layout_marginTop="355dp"
                android:src="@drawable/arduino_logo" />

            <TextView
                android:id="@+id/text_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="360dp"
                android:fontFamily="@font/montserratregular"
                android:text="@string/powerby"
                android:textColor="@color/gray_pekat"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        app:border_color="@color/white"
        app:border_width="8dp"
        android:src="@drawable/man"/>

</androidx.constraintlayout.widget.ConstraintLayout>